--- a/settings/v2/packages/project.json
+++ b/settings/v2/packages/project.json
@@ -1,3 +1,11 @@
 {
-  "__version__": "1.0.1"
+  "__version__": "1.0.1",
+  "general": {
+    "designResolution": {
+      "width": 414,
+      "height": 896,
+      "fitWidth": true,
+      "fitHeight": true
+    }
+  }
 }
